src/sass/components/_components-form-field-range.scss
// COMPONENTS
// FORM-INPUT-RANGE
// =================================================
@use "sass:color";
@use "sass:math";
@use "../abstracts/index" as *;

// Styling Cross-Browser Compatible Range Inputs with Sass
// Github: https://github.com/darlanrod/input-range-sass
// Author: Darlan Rod https://github.com/darlanrod
// Version 1.5.2
// MIT License

.field-range[type="range"] {
	width: $field-range-track-width;
	height: 5.4rem;
	margin: math.div($field-range-thumb-height, 2);
	background: transparent;
	appearance: none;

	&::-moz-focus-outer {
		border: 0;
	}

	&:focus {
		outline: 0;

		&::-webkit-slider-runnable-track {
			background: color.scale($color: $field-range-track-color, $lightness: $field-range-contrast);
		}
	}

	&::-webkit-slider-runnable-track {
		@include field-range-track;
		@include field-range-shadow(
			$field-range-track-shadow-size,
			$field-range-track-shadow-blur,
			$field-range-track-shadow-color
		);

		border: $field-range-track-border-width solid $field-range-track-border-color;
		border-radius: $field-range-track-radius;
		background: $field-range-track-color;
	}

	&::-webkit-slider-thumb {
		@include field-range-thumb;

		appearance: none;
		margin-top: (
			math.div(-$field-range-track-border-width * 2 + $field-range-track-height, 2) - math.div($field-range-thumb-height,
				2)
		);
	}

	&::-moz-range-track {
		@include field-range-shadow(
			$field-range-track-shadow-size,
			$field-range-track-shadow-blur,
			$field-range-track-shadow-color
		);
		@include field-range-track;

		height: math.div($field-range-track-height, 2);
		border: $field-range-track-border-width solid $field-range-track-border-color;
		border-radius: $field-range-track-radius;
		background: $field-range-track-color;
	}

	&::-moz-range-thumb {
		@include field-range-thumb;
	}

	&:disabled {
		&::-webkit-slider-thumb,
		&::-moz-range-thumb,
		&::-webkit-slider-runnable-track {
			cursor: not-allowed;
		}
	}
}

